--- a/Weather/style.css
+++ b/Weather/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('weather.jpg');
+    background-image: url('Weather/weather.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
